--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "eslint-plugin-cypress": "^2.11.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -18,7 +19,8 @@
     "eject": "react-scripts eject",
     "server": "json-server -p3001 db.json",
     "eslint": "eslint .",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "test:e2e": "cypress run"
   },
   "eslintConfig": {
     "extends": [
